// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vue to TSX compiler if-else-if.vue: if-else-if.vue 1`] = `
"/** @jsx __VueDX__JSX.createElement */
import * as __VueDX__JSX from 'vue';
import * as __VueDX__TypeCheck from 'vuedx~runtime';
//#region <script>
import { defineComponent as __VueDX__defineComponent } from 'vue';
export const __VueDX__Component = __VueDX__defineComponent({});

function __VueDX__RegisterSelf<T extends {}>(arg0: T) {
  const key = \\"IfElseIf\\" as const;
  return { ...arg0, [key]: IfElseIf };
}
//#endregion
const __VueDX__ctx = __VueDX__RegisterSelf(new __VueDX__Component())
//#region <template>
export function __VueDX__render() {
  /*<vuedx:templateGlobals>*/
  let type = __VueDX__ctx.type;
  /*</vuedx:templateGlobals>*/
  return (
    <>
      {type === 'A'
        ? <>
            <div
              /*<vuedx:tsx-completions-target/>*/
            >
              {\\"A\\"}
            </div>
          </>
        : type === 'B'
        ? <>
            <div
              /*<vuedx:tsx-completions-target/>*/
            >
              {\\"B\\"}
            </div>
          </>
        : type === 'C'
        ? <>
            <div
              /*<vuedx:tsx-completions-target/>*/
            >
              {\\"C\\"}
            </div>
          </>
        : <>
            <div
              /*<vuedx:tsx-completions-target/>*/
            >
              {\\"Not A/B/C\\"}
            </div>
          </>
      }
    </>
  )
}
/*<vuedx:diagnosticsIgnore>*/
function __VueDX__slots() {
  /*<vuedx:templateGlobals>*/
  let type = __VueDX__ctx.type;
  /*</vuedx:templateGlobals>*/
  return __VueDX__TypeCheck.internal.union(__VueDX__TypeCheck.internal.flat([
  ]))
}
/*</vuedx:diagnosticsIgnore>*/

//#endregion
//#region public component definition
export default class IfElseIf {
  $props = null as unknown as typeof __VueDX__ctx.$props;
  $slots = null as unknown as __VueDX__TypeCheck.internal.Slots<ReturnType<typeof __VueDX__slots>>;
}
//#endregion
"
`;

exports[`Vue to TSX compiler nested-for-slot.vue: nested-for-slot.vue 1`] = `
"/** @jsx __VueDX__JSX.createElement */
import * as __VueDX__JSX from 'vue';
import * as __VueDX__TypeCheck from 'vuedx~runtime';
//#region <script>
import { defineComponent as __VueDX__defineComponent } from 'vue';
export const __VueDX__Component = __VueDX__defineComponent({});

function __VueDX__RegisterSelf<T extends {}>(arg0: T) {
  const key = \\"NestedForSlot\\" as const;
  return { ...arg0, [key]: NestedForSlot };
}
//#endregion
const __VueDX__ctx = __VueDX__RegisterSelf(new __VueDX__Component())
//#region <template>
export function __VueDX__render() {
  /*<vuedx:templateGlobals>*/
  let list = __VueDX__ctx.list;
  let props = __VueDX__ctx.props;
  /*</vuedx:templateGlobals>*/
  return (
    <>
      {
        __VueDX__TypeCheck.internal.renderList(list, (items) => {
          return (
            <div
              /*<vuedx:tsx-completions-target/>*/
            >
              {
                __VueDX__ctx.$slots['default']?.({
                }) ?? (
                  <>
                    {\\"fallback content\\"}
                  </>
                )
              }
              {
                __VueDX__TypeCheck.internal.renderList(items, (item) => {
                  return (
                    <span
                      /*<vuedx:tsx-completions-target/>*/
                    >
                      {
                        __VueDX__ctx.$slots[\\"other\\"]?.({
                          ...(props),
                          myProp: item,
                        }) ?? (
                          <>
                            {\\"fallback content\\"}
                          </>
                        )
                      }
                    </span>
                  )
                })
              }
            </div>
          )
        })
      }
    </>
  )
}
/*<vuedx:diagnosticsIgnore>*/
function __VueDX__slots() {
  /*<vuedx:templateGlobals>*/
  let list = __VueDX__ctx.list;
  let props = __VueDX__ctx.props;
  /*</vuedx:templateGlobals>*/
  return __VueDX__TypeCheck.internal.union(__VueDX__TypeCheck.internal.flat([
    __VueDX__TypeCheck.internal.flat(
      __VueDX__TypeCheck.internal.renderList(list, (items) => (
        {
          default: {
          },
        }
      ))
    ),
    __VueDX__TypeCheck.internal.flat(
      __VueDX__TypeCheck.internal.renderList(list, (items) => (
        __VueDX__TypeCheck.internal.flat(
          __VueDX__TypeCheck.internal.renderList(items, (item) => (
            {
              \\"other\\": {
                ...(props),
                myProp: item,
              },
            }
          ))
        )
      ))
    ),
  ]))
}
/*</vuedx:diagnosticsIgnore>*/

//#endregion
//#region public component definition
export default class NestedForSlot {
  $props = null as unknown as typeof __VueDX__ctx.$props;
  $slots = null as unknown as __VueDX__TypeCheck.internal.Slots<ReturnType<typeof __VueDX__slots>>;
}
//#endregion
"
`;

exports[`Vue to TSX compiler ts-script-template.vue: ts-script-template.vue 1`] = `
"/** @jsx __VueDX__JSX.createElement */
import * as __VueDX__JSX from 'vue';
import * as __VueDX__TypeCheck from 'vuedx~runtime';
//#region <script>

import { defineComponent } from 'vue'

export const __VueDX__Component = defineComponent({
  data: () => ({ foo: 'string' }),
})

function __VueDX__RegisterSelf<T extends {}>(arg0: T) {
  const key = \\"TsScriptTemplate\\" as const;
  return { ...arg0, [key]: TsScriptTemplate };
}
//#endregion
const __VueDX__ctx = __VueDX__RegisterSelf(new __VueDX__Component())
//#region <template>
export function __VueDX__render() {
  /*<vuedx:templateGlobals>*/
  let foo = __VueDX__ctx.foo;
  let console = __VueDX__ctx.console;
  /*</vuedx:templateGlobals>*/
  return (
    <>
      <div
        staticClass=\\"foo bar\\"
        \\"class\\"={{ foo: foo }}
        \\"innerHTML\\"={foo}
        {...({[foo]: true})}
        {...(foo)}
        onClick={() => {
          __VueDX__TypeCheck.internal.checkOnDirective({} as unknown as __VueDX__JSX.JSX.IntrinsicElements, \\"div\\" as const, \\"click\\" as const, () => {
          console.log
          }, {  });
          __VueDX__TypeCheck.internal.checkOnDirective({} as unknown as __VueDX__JSX.JSX.IntrinsicElements, \\"div\\" as const, \\"click\\" as const, () => {
          console.log
          }, { \\"left\\": true as const,  });
          __VueDX__TypeCheck.internal.checkOnDirective({} as unknown as __VueDX__JSX.JSX.IntrinsicElements, \\"div\\" as const, \\"click\\" as const, () => {
          console.log
          }, { \\"right\\": true as const,  });
        }}
        /*<vuedx:tsx-completions-target/>*/
      >
        {foo}
      </div>
    </>
  )
}
/*<vuedx:diagnosticsIgnore>*/
function __VueDX__slots() {
  /*<vuedx:templateGlobals>*/
  let foo = __VueDX__ctx.foo;
  let console = __VueDX__ctx.console;
  /*</vuedx:templateGlobals>*/
  return __VueDX__TypeCheck.internal.union(__VueDX__TypeCheck.internal.flat([
  ]))
}
/*</vuedx:diagnosticsIgnore>*/

//#endregion
//#region public component definition
export default class TsScriptTemplate {
  $props = null as unknown as typeof __VueDX__ctx.$props;
  $slots = null as unknown as __VueDX__TypeCheck.internal.Slots<ReturnType<typeof __VueDX__slots>>;
}
//#endregion
"
`;
